--- a/RL_VRP.ipynb
+++ b/RL_VRP.ipynb
@@ -136,7 +136,7 @@
       "source": [
         "def argmax(state):\n",
         "    \"\"\"\n",
-        "    Takes in a list of q_values and returns the index of the item\n",
+        "    Takes in a list containing states and returns the index of the item\n",
         "    with the highest value. Breaks ties randomly.\n",
         "    returns: int - the index of the highest value in q_values\n",
         "    \"\"\"\n",
